# FileCheck.py

./: .bumpversion.cfg  .coverage  .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  git-precommit-hook.sh  pyproject.toml  requirements.dev.txt  tasks.py
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-ubuntu.yml  ci-windows.yml
docs/: 01-what-is-filecheck.rst  02-installation.rst  03-tutorial-hello-world.rst  04-check-commands.rst  04-tutorial-lit-and-filecheck.rst  04-tutorial-llvm-lit-and-filecheck.rst  05-check-commands.rst  06-options.rst  07-extra-features.rst  07-roadmap.rst  08-known-issues.rst  08-roadmap.rst  conf.py  index.rst  requirements.txt
docs/examples/what-is-filecheck/: .gitignore  01-pass.c  lit.cfg
examples/: hello-world.check  lit.cfg
examples/check-commands/: CHECK-NEXT.check  CHECK-NOT.check  CHECK.check
examples/hello-world/: hello-world-regex.check  order-of-matching.check
examples/lit-and-filecheck/: 02-fail.c  minimal.itest
filecheck/: FileCheck.py  filecheck.py
src/: FileCheck  FileCheck.py
tests/integration/: lit.cfg
tests/integration/tests/basic_functionality/01_empty_invocation/: sample.itest
tests/integration/tests/basic_functionality/02_check_file_does_not_exist/: sample.itest
tests/integration/tests/basic_functionality/02_empty_string_input/: sample.itest
tests/integration/tests/basic_functionality/03_empty_check_file/: sample.itest
tests/integration/tests/basic_functionality/03_empty_file_input/: filecheck.match  sample.itest
tests/integration/tests/basic_functionality/03_empty_string_input/: sample.itest
tests/integration/tests/basic_functionality/04_empty_file_input/: sample.itest
tests/integration/tests/basic_functionality/04_empty_input_string/: sample.itest
tests/integration/tests/basic_functionality/04_nonempty_check_file_but_no_checks/: sample.itest
tests/integration/tests/basic_functionality/05_empty_input_file/: sample.itest
tests/integration/tests/basic_functionality/05_empty_input_string/: sample.itest
tests/integration/tests/examples/hello-world/: hello-world-regex.check  hello-world.check
tests/integration/tests/examples/lit-and-filecheck/: .gitignore  01-pass.c  02-fail.c  03-line.c  minimal.itest
tests/integration/tests/general/01-utf8-characters/: filecheck.check  filecheck.input
tests/integration/tests/general/02-utf8-characters-printed-at-failure/: sample.check  sample.input  sample.itest
tests/integration/tests/invalid_input/01_empty_invocation/: sample.itest
tests/integration/tests/invalid_input/02_check_file_does_not_exist/: sample.itest
tests/integration/tests/invalid_input/03_empty_check_file/: sample.itest
tests/integration/tests/invalid_input/04_nonempty_check_file_but_no_checks/: filecheck.check  sample.itest
tests/integration/tests/invalid_input/05_one_newline_symbol_input/: filecheck.check  sample.itest
tests/integration/tests/invalid_input/06_empty_input_file/: sample.itest
tests/integration/tools/: expect_exit.py  printf.py
tests/integration/tools/FileCheck/: FileCheck  FileCheck-8.0.1  FileCheck-8.0.1-Windows  FileCheck-9.0.1
tests/unit/: conftest.py  test_check_parser.py  test_config.py
(+239 files in other folders)
