[tool.poetry]
name = "filecheck"
version = "0.0.21"
description = "Python port of LLVM's FileCheck, flexible pattern matching file verifier"
authors = ["Stanislav Pankevich <s.pankevich@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
black = "21.9b0"
bump2version = "0.5.11"
coverage = "^5.4"
flake8 = "^3.9.2"
invoke = "1.3.0"
lit = "^0.9"
pylint = "2.12.2"
pytest = "^6.2.2"

[tool.poetry.scripts]
filecheck = "filecheck.filecheck:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
